[package]
name = "squid_game_marble_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
teloxide = { version = "0.5.3", features = ["macros", "auto-send", "frunk"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
frunk = "0.4"
frunk_core = "0.4"
